--- a/client/views/layouts/main/main.html
+++ b/client/views/layouts/main/main.html
@@ -7,13 +7,13 @@
 
     <!-- Navigation -->
     {{#if currentUser}}
-      {{> render component="navigation" }}
+      {{> navigation}}
     {{/if}}
     <!-- Page wraper -->
     <div id="page-wrapper" class="gray-bg">
 
       <!-- Page wrapper -->
-      {{> render component="topNavbar" }}
+      {{> topNavbar}}
 
       <!-- Main view  -->
       {{> yield}}
