--- a/client/views/app/navigations/navigation/navigation.html
+++ b/client/views/app/navigations/navigation/navigation.html
@@ -14,7 +14,7 @@
         {{#if isInOrganization}}
           {{#if getCurrentAreaId}}
             {{#each menuEntries}}
-              {{> menuEntry menuEntry=this}}
+              {{> menuEntry}}
             {{/each}}
           {{/if}}
         {{/if}}
