--- a/client/views/app/organizations/organization.less
+++ b/client/views/app/organizations/organization.less
@@ -1,3 +1,9 @@
+.organization-buttons-container {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
 .area-color-icon {
   width: 15px;
   height: 15px;
