--- a/client/views/app/organizations/organization_buttons/view.html
+++ b/client/views/app/organizations/organization_buttons/view.html
@@ -1,36 +1,33 @@
 <template name="organizationButtons">
-  {{#if isOrganizationOwner}}
-    <span style="margin-left: 130px;">Organization</span>
-  {{else}}
-    <span>Organization</span>
-  {{/if}}
+  <span>Organization</span>
 
-
-  {{#if isOrganizationOwner}}
-    <span class="pull-right btn btn-sm btn-link organization-details-flyout organization-settings-buttons"><i
+  <div class="organization-buttons-container">
+    {{#if isOrganizationOwner}}
+      <span class="pull-right btn btn-sm btn-link organization-details-flyout organization-settings-buttons"><i
         class="fa fa-fw fa-cog"></i></span>
-  {{/if}}
+    {{/if}}
 
-  {{#if canInvite}}
-    <span class="pull-right btn btn-sm btn-link invitation-flyout organization-settings-buttons"><i
+    {{#if canInvite}}
+      <span class="pull-right btn btn-sm btn-link invitation-flyout organization-settings-buttons"><i
         class="fa fa-fw fa-envelope"></i></span>
-  {{/if}}
+    {{/if}}
 
-  {{#if isOrganizationOwner}}
-    <div class="btn-group pull-right organization-settings-buttons">
-      <button type="button" class="btn dropdown-toggle btn-link" data-toggle="dropdown" aria-expanded="false">
-        <i class="fa fa-fw fa-plus"></i>
-      </button>
-      <ul class="dropdown-menu" role="menu">
-        <li>
-          <a href="#" class="create-location-flyout">Add Location</a>
-        </li>
-        {{#if hasLocations}}
+    {{#if isOrganizationOwner}}
+      <div class="btn-group pull-right organization-settings-buttons">
+        <button type="button" class="btn dropdown-toggle btn-link" data-toggle="dropdown" aria-expanded="false">
+          <i class="fa fa-fw fa-plus"></i>
+        </button>
+        <ul class="dropdown-menu" role="menu">
           <li>
-            <a href="#" class="create-area-flyout">Add Area</a>
+            <a href="#" class="create-location-flyout">Add Location</a>
           </li>
-        {{/if}}
-      </ul>
-    </div>
-  {{/if}}
+          {{#if hasLocations}}
+            <li>
+              <a href="#" class="create-area-flyout">Add Area</a>
+            </li>
+          {{/if}}
+        </ul>
+      </div>
+    {{/if}}
+  </div>
 </template>
