Got rid of flow comp in job-items-ingredients-list

--- a/client/lib/components/menu-items/submit/view.html
+++ b/client/lib/components/menu-items/submit/view.html
@@ -41,10 +41,10 @@
       <label class="col-sm-2 control-label">Prep items used</label>
       {{> render component="listOfJobItems" id="menuSubmit" name="menuSubmit"}}
     </div>
-    
+
     <div class="form-group">
       <label class="col-sm-2 control-label">Ingredients used</label>
-      {{> render component="listOfIngredients" id="menuSubmit" name="menuSubmit"}}
+      {{> listOfIngredients id="menuSubmit" name="menuSubmit"}}
     </div>
 
     <div class="form-group">
