--- a/client/views/app/job-items/edit/job-items-edit.html
+++ b/client/views/app/job-items/edit/job-items-edit.html
@@ -60,7 +60,7 @@
                 <div class="form-group">
                   <label class="col-sm-2 control-label">Ingredients used
                   </label>
-                  {{> render component="listOfIngredients" name="editJobItem"}}
+                  {{> listOfIngredients name="editJobItem"}}
                 </div>
               {{/if}}
               {{#if state$isPrep}}
