--- a/client/views/app/job-items/submit/job-items-sublit.html
+++ b/client/views/app/job-items/submit/job-items-sublit.html
@@ -55,7 +55,7 @@
       {{#if isPrep}}
         <div class="form-group">
           <label class="col-sm-2 control-label">Ingredients used</label>
-          {{> render component="listOfIngredients"}}
+          {{> listOfIngredients}}
         </div>
       {{/if}}
 
