--- a/client/views/app/job-items/ingredients-list/job-items-ingredients-list.html
+++ b/client/views/app/job-items/ingredients-list/job-items-ingredients-list.html
@@ -11,14 +11,14 @@
       </tr>
       </thead>
       <tbody>
-      {{#each state$ingredientsList}}
-        {{> render component='ingredientItemEdit' id=this name=state$name itemId=state$id}}
+      {{#each ingredientsList}}
+        {{> render component='ingredientItemEdit' id=this name=name itemId=id}}
       {{/each}}
       </tbody>
       <br>
       <button id="showIngredientsList" class="btn btn-block btn-outline btn-primary" type="button">
         <i class="fa fa-plus"></i>
-        {{#if state$isMenu}}
+        {{#if isMenu}}
           Add ingredients to menu item
         {{else}}
           Add ingredients to prep item
