Fixed invitation list

--- a/client/views/app/organizations/organization-flyout-header/invitations-list/view.html
+++ b/client/views/app/organizations/organization-flyout-header/invitations-list/view.html
@@ -28,7 +28,7 @@
         </tr>
         </thead>
         <tbody>
-        {{#each state$invitations}}
+        {{#each invitations}}
           <tr>
             <td>{{name}}</td>
             <td>{{email}}</td>
