--- a/client/views/app/organizations/organization-flyout-header/organization-details/view.html
+++ b/client/views/app/organizations/organization-flyout-header/organization-details/view.html
@@ -3,7 +3,7 @@
     <button class="close-flyout-button">
       <i class="fa fa-angle-right"></i>
     </button>
-    Invitations List
+    Organization details
   </div>
   <div class="flyout-content">
     <div class="row">
@@ -26,8 +26,8 @@
     </div>
     <div class="row" style="display: block;"></div>
     <hr/>
-    <button type="button" class="btn btn-danger btn-block delete-organization" data-id="{{state$organizationId}}">Delete
-      Organisation
+    <button type="button" class="btn btn-danger btn-block delete-organization">Delete
+      Organization
     </button>
   </div>
 </template>
