--- a/client/views/app/organizations/view.html
+++ b/client/views/app/organizations/view.html
@@ -3,7 +3,7 @@
     <button class="close-flyout-button">
       <i class="fa fa-angle-right"></i>
     </button>
-    <div class="col-xs-11 col-xs-offset-1 text-center">
+    <div class="col-xs-11 col-xs-offset-1">
       {{>organizationButtons hasLocations=hasLocations
          organizationId=state$organization._id}}
     </div>
