Got rid of FC in jobItemView and jobItemEdit

--- a/client/lib/components/menu-items/jobItems_list/view.html
+++ b/client/lib/components/menu-items/jobItems_list/view.html
@@ -10,7 +10,7 @@
       </thead>
       <tbody>
       {{#each state$jobItemsList}}
-        {{> render component='jobItemEdit' id=this name=state$name itemId=state$id}}
+        {{> jobItemEdit id=this name=state$name itemId=state$id}}
       {{/each}}
       </tbody>
       <br>
