--- a/client/views/app/job-items/items/edit/job-items-items-edit.html
+++ b/client/views/app/job-items/items/edit/job-items-items-edit.html
@@ -1,12 +1,12 @@
 <template name="jobItemEdit">
   <tr>
-    <td>{{state$item.name}}</td>
-    <td>$ {{state$item.prepCostPerPortion}}</td>
-    <td><input type="text" name="prep_qty" class="prep-qty" data-id="{{state$item._id}}" value="{{state$quantity}}"/>
+    <td>{{item.name}}</td>
+    <td>$ {{item.prepCostPerPortion}}</td>
+    <td><input type="text" name="prep_qty" class="prep-qty" data-id="{{item._id}}" value="{{quantity}}"/>
     </td>
     <td>
       <a href="">
-        <i class="fa fa-trash removePrep" data-id="{{state$item._id}}"></i>
+        <i class="fa fa-trash removePrep" data-id="{{item._id}}"></i>
       </a>
     </td>
   </tr>
