--- a/client/views/app/job-items/items/view/job-items-items-view.html
+++ b/client/views/app/job-items/items/view/job-items-items-view.html
@@ -1,7 +1,7 @@
 <template name="jobItemView">
   <tr>
-    <td>{{state$name}}</td>
-    <td>{{state$quantity}}</td>
-    <td>$ {{state$cost}}</td>
+    <td>{{name}}</td>
+    <td>{{quantity}}</td>
+    <td>$ {{cost}}</td>
   </tr>
 </template>
