--- a/client/views/app/sales-forecast/sales-forecast.html
+++ b/client/views/app/sales-forecast/sales-forecast.html
@@ -39,7 +39,7 @@
             </tr>
             </thead>
             <tbody>
-            {{> totalSalesRow}}
+            {{> totalSalesRow weekDate=date}}
 
             {{#each menuItems}}
               {{> predictionSalesRow currentWeekDate=../date week=week menuItem=this}}
