--- a/client/views/app/common/total-sales-row/total-sales-row.html
+++ b/client/views/app/common/total-sales-row/total-sales-row.html
@@ -1,8 +1,8 @@
 <template name="totalSalesRow">
   <tr>
     <td><b>Sales</b></td>
-    {{#each state$week}}
-      {{#with state$getTotalSales this}}
+    {{#each week}}
+      {{#with getTotalSales this}}
         <td>${{predicted}}</td>
         <td>${{actual}}</td>
       {{/with}}
