Backward compatibility with old code for total sales row

--- a/client/lib/components/roster/weekly_figures/rosterTable/view.html
+++ b/client/lib/components/roster/weekly_figures/rosterTable/view.html
@@ -24,7 +24,8 @@
           </tr>
           </thead>
           <tbody>
-          {{>render component="totalSalesRow"}}
+          <!--todo add weekdate here e.g. {year: number, week: number}-->
+          <!--{{>totalSalesRow weekDate=}}-->
           <tr>
             <td>Staff Cost ($)</td>
             {{#each state$weekDates}}
