Fix weather forecast view, port ghost-editable

--- a/client/views/app/sales-forecast/sales-forecast.html
+++ b/client/views/app/sales-forecast/sales-forecast.html
@@ -25,9 +25,7 @@
               <!--Weather-->
               <td></td>
               {{#each week}}
-                {{#with dailyWeatherForecast this}}
-                  {{> weatherForecast }}
-                {{/with}}
+                {{> weatherForecast dailyWeatherForecast}}
               {{/each}}
             </tr>
             <tr>
