--- a/client/lib/components/menu-items/settings/view.html
+++ b/client/lib/components/menu-items/settings/view.html
@@ -108,7 +108,7 @@
     <!-- JOB ITEMS LIST-->
     <div class="modal fade" id="jobItemListModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
          aria-hidden="true">
-      {{> render component='jobItemsModalList' name="submitMenuItem"}}
+      {{> jobItemsModalList name="submitMenuItem"}}
     </div>
     <!-- /JOB ITEMS LIST -->
   </form>
