--- a/client/views/app/job-items/modal_list/job-items-modal-list.html
+++ b/client/views/app/job-items/modal_list/job-items-modal-list.html
@@ -21,8 +21,8 @@
               </tr>
               </thead>
               <tbody>
-              {{#each state$getJobItems}}
-                {{> render component='jobItemListed' jobitem=this name="addPrep"}}
+              {{#each getJobItems}}
+                {{> jobItemListed jobitem=this name="addPrep"}}
               {{/each}}
               </tbody>
             </table>
