Fixed users view

--- a/client/views/app/users/pin_lock/pin_lock.html
+++ b/client/views/app/users/pin_lock/pin_lock.html
@@ -4,6 +4,6 @@
     <span></span>
   </div>
   <div class="middle-box text-center lockscreen animated fadeInDown">
-    {{> render component="pinCode" backwardUrl=backwardUrl}}
+    {{> pinCode backwardUrl=backwardUrl}}
   </div>
 </template>
