--- a/client/views/app/users/profile/profile.html
+++ b/client/views/app/users/profile/profile.html
@@ -7,9 +7,9 @@
   {{/if}}
   <div class="wrapper wrapper-content">
     <div class="row animated">
-      {{> render component="profile" id=id}}
-      {{> render component="rosteredShifts" id=id}}
-      {{> render component="training" userId=id}}
+      {{> profile id=id}}
+      {{> rosteredShifts _id=id}}
+      {{> training userId=id}}
     </div>
   </div>
 </template>
