--- a/client/views/app/admin/view.html
+++ b/client/views/app/admin/view.html
@@ -7,7 +7,7 @@
       <div class="col-md-12">
         <div class="ibox">
           <div class="ibox-content">
-            {{> render component=component}}
+            {{> Template.dynamic template=template}}
           </div>
         </div>
       </div>
