--- a/client/views/app/users/pin_lock/pin-code/pin-code.html
+++ b/client/views/app/users/pin_lock/pin-code/pin-code.html
@@ -1,6 +1,6 @@
 <template name="pinCode">
   <div>
-    {{> render component="userBio" user=state$user}}
+    {{> userBio user=state$user}}
     <p>Enter your PIN to unlock </p>
 
     <form class="m-t" role="form">
