--- a/client/views/app/users/switch/switch.html
+++ b/client/views/app/users/switch/switch.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-12 cold-lg-12">
         <h1>Switch user</h1>
-        {{> render component="switchUser" users=users}}
+        {{> switchUser users=users}}
       </div>
     </div>
   </div>
