converted weekly roster and template

--- a/client/views/app/roster/template/weekly-roster-template.html
+++ b/client/views/app/roster/template/weekly-roster-template.html
@@ -3,6 +3,6 @@
   {{> pageHeading title="Template Weekly Roster" category='Roster' name="weeklyrostertemplate"}}
 
   <div class="wrapper wrapper-content animated">
-    {{> render component="weeklyShiftRoster" type="template"}}
+    {{> weeklyShiftRoster type="template"}}
   </div>
 </template>
