--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-note-item/manager-notes-editor/manager-notes-editor.html
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-note-item/manager-notes-editor/manager-notes-editor.html
@@ -1,7 +1,7 @@
 <template name="managerNotesEditor">
   <div class="manager-notes-editor">
     <div class="form-group">
-      <textarea class="form-control" name="noteText">{{#if state$note}}{{state$note.text}}{{/if}}</textarea>
+      <textarea class="form-control" name="noteText">{{#if note}}{{note.text}}{{/if}}</textarea>
     </div>
     <div class="form-group">
       <button class="btn btn-primary create-manager-note">
