--- a/client/views/app/users/profile/profile-items/profile/profile.html
+++ b/client/views/app/users/profile/profile-items/profile/profile.html
@@ -5,7 +5,7 @@
         <h5>Profile Detail</h5>
       </div>
       <div>
-        {{> profileImage id=state$user._id}}
+        {{> profileImage user=user}}
         <div class="ibox-content profile-content">
           <h4>
             <strong>
@@ -13,22 +13,22 @@
                 <a href="" id="firstname">{{firstName}}</a>
                 <a href="" id="lastname">{{lastName}}</a>
               {{else}}
-                {{username state$user._id}}
+                {{username user._id}}
               {{/if}}
             </strong>
           </h4>
 
           <p><i class="fa fa-mobile-phone m-r-xs"></i>
             {{#if isEditPermitted}}
-              <a href="#" id="phone" data-id="{{state$user._id}}" class="editable">{{state$user.profile.phone}}</a>
+              <a href="#" id="phone" data-id="{{user._id}}" class="editable">{{user.profile.phone}}</a>
             {{else}}
-              {{state$user.profile.phone}}
+              {{user.profile.phone}}
             {{/if}}
           </p>
 
           <p><i class="fa fa-envelope m-r-xs"></i>
             {{#if isEditPermitted}}
-              <a href="#" id="email" data-id="{{state$user._id}}" class="editable">{{email}}</a>
+              <a href="#" id="email" data-id="{{user._id}}" class="editable">{{email}}</a>
             {{else}}
               {{email}}
             {{/if}}
@@ -55,11 +55,11 @@
 
           <p>Weekdays ($):
             {{#if isManager}}
-              <a href="#" id="weekdaysrate" data-id="{{state$user._id}}"
-                 class="editable">{{state$user.profile.payrates.weekdays}}</a>
+              <a href="#" id="weekdaysrate" data-id="{{user._id}}"
+                 class="editable">{{user.profile.payrates.weekdays}}</a>
             {{else}}
-              {{#if state$user.profile.payrates.weekdays}}
-                {{state$user.profile.payrates.weekdays}}
+              {{#if user.profile.payrates.weekdays}}
+                {{user.profile.payrates.weekdays}}
               {{else}}
                 Not added
               {{/if}}
@@ -68,11 +68,11 @@
 
           <p>Saturday ($):
             {{#if isManager}}
-              <a href="#" id="saturdayrate" data-id="{{state$user._id}}"
-                 class="editable">{{state$user.profile.payrates.saturday}}</a>
+              <a href="#" id="saturdayrate" data-id="{{user._id}}"
+                 class="editable">{{user.profile.payrates.saturday}}</a>
             {{else}}
-              {{#if state$user.profile.payrates.saturday}}
-                {{state$user.profile.payrates.saturday}}
+              {{#if user.profile.payrates.saturday}}
+                {{user.profile.payrates.saturday}}
               {{else}}
                 Not added
               {{/if}}
@@ -81,11 +81,11 @@
 
           <p>Sunday ($):
             {{#if isManager}}
-              <a href="#" id="sundayrate" data-id="{{state$user._id}}"
-                 class="editable">{{state$user.profile.payrates.sunday}}</a>
+              <a href="#" id="sundayrate" data-id="{{user._id}}"
+                 class="editable">{{user.profile.payrates.sunday}}</a>
             {{else}}
-              {{#if state$user.profile.payrates.sunday}}
-                {{state$user.profile.payrates.sunday}}
+              {{#if user.profile.payrates.sunday}}
+                {{user.profile.payrates.sunday}}
               {{else}}
                 Not added
               {{/if}}
@@ -96,14 +96,14 @@
 
           <h4>No. of shifts per week</h4>
           {{#if isManager}}
-            <select class="form-control shiftsPerWeek" data-id="{{state$user._id}}">
+            <select class="form-control shiftsPerWeek" data-id="{{user._id}}">
               {{#each shiftsPerWeek}}
                 <option selected="{{this.selected}}">{{this.shift}}</option>
               {{/each}}
             </select>
           {{else}}
-            {{#if state$user.profile.shiftsPerWeek}}
-              {{state$user.profile.shiftsPerWeek}}
+            {{#if user.profile.shiftsPerWeek}}
+              {{user.profile.shiftsPerWeek}}
             {{else}}
               Not added
             {{/if}}
