--- a/client/views/app/create-organization/create_organization.html
+++ b/client/views/app/create-organization/create_organization.html
@@ -4,7 +4,7 @@
   <div class="wrapper wrapper-content">
     <div class="row">
       <div class="col-md-12">
-        {{> render component="createOrganizationPage"}}
+        {{> createOrganizationPage}}
       </div>
     </div>
   </div>
