--- a/client/views/app/organizations/organization-flyout-header/create-location/create-location.html
+++ b/client/views/app/organizations/organization-flyout-header/create-location/create-location.html
@@ -8,7 +8,7 @@
 
   <div class="flyout-content">
     <div class="container-fluid">
-      {{> render component="editLocationForm" submitCaption="Create" onSubmit=state$onLocationSubmit onCancel=state$onCancel}}
+      {{> editLocationForm submitCaption="Create" onSubmit=onLocationSubmit onCancel=onCancel}}
     </div>
   </div>
 </template>
