--- a/client/views/app/organizations/common/edit-location-form/edit-location-form.html
+++ b/client/views/app/organizations/common/edit-location-form/edit-location-form.html
@@ -1,6 +1,6 @@
 <template name="editLocationForm">
   <form class="form-horizontal edit-location-form-component">
-    {{#with state$locationDoc}}
+    {{#with locationDoc}}
       <div class="form-group">
         <label class="col-sm-2 control-label">Location Name</label>
 
@@ -12,7 +12,7 @@
         <label class="col-sm-2 control-label">Country</label>
 
         <div class="col-sm-10">
-          {{> render component='selectComponent' values=countries selected=country name='country'}}
+          {{> selectComponent values=countries selected=country name='country'}}
         </div>
       </div>
       <div class="form-group">
@@ -34,15 +34,15 @@
       <label class="col-sm-2 control-label">Timezone</label>
 
       <div class="col-sm-10">
-        {{> timezonePicker class="form-control time-zone-select" selected=state$timeZone}}
+        {{> timezonePicker class="form-control time-zone-select" selected=timeZone}}
       </div>
     </div>
 
-    {{> render component="locationTimeSelect" time=state$openingTime label="Opening Time" hoursName="openingHour" minutesName="openingMinutes"}}
-    {{> render component="locationTimeSelect" time=state$closingTime label="Closing Time" hoursName="closingHour" minutesName="closingMinutes"}}
+    {{> locationTimeSelect time=openingTime label="Opening Time" hoursName="openingHour" minutesName="openingMinutes"}}
+    {{> locationTimeSelect time=closingTime label="Closing Time" hoursName="closingHour" minutesName="closingMinutes"}}
 
     <!--todo: extract this stuff to separate component-->
-    {{#with state$locationDoc}}
+    {{#with locationDoc}}
       <div class="panel panel-default">
         <div class="panel-heading text-center"><b>POS Settings (optional)</b></div>
         <div class="panel-body">
@@ -72,8 +72,8 @@
     {{/with}}
     <div class="form-group">
       <div class="btn-group col-xs-12">
-        <button type="submit" class="btn btn-primary btn-half-width">{{state$submitCaption}}</button>
-        <button type="button" class="btn btn-default btn-half-width close-flyout">Cancel</button>
+        <button type="submit" class="btn btn-primary btn-half-width">{{submitCaption}}</button>
+        <button type="button" class="btn btn-default btn-half-width cancel-button">Cancel</button>
       </div>
     </div>
   </form>
