--- a/client/views/app/organizations/location-settings/location-settings.html
+++ b/client/views/app/organizations/location-settings/location-settings.html
@@ -3,12 +3,12 @@
     <button class="close-flyout-button">
       <i class="fa fa-angle-right"></i>
     </button>
-    {{state$location.name}} location settings
+    {{location.name}} location settings
   </div>
 
   <div class="flyout-content">
     <div class="container-fluid">
-      <h1>{{state$location.name}}</h1>
+      <h1>{{location.name}}</h1>
 
       <div class="row">
         <div class="col-xs-12">
@@ -18,7 +18,7 @@
         </div>
       </div>
 
-      {{> render component="editLocationForm" locationDoc=state$location submitCaption="Save" onSubmit=state$onLocationSubmit onCancel=state$onCancel}}
+      {{> editLocationForm locationDoc=location submitCaption="Save" onSubmit=onLocationSubmit onCancel=onCancel}}
 
       {{#if isOrganizationOwner}}
         <div class="row">
