--- a/client/views/app/roster/weekly-figures/figure-boxes/sales/sales.html
+++ b/client/views/app/roster/weekly-figures/figure-boxes/sales/sales.html
@@ -1,22 +1,22 @@
-<template name="staffCostPercentageFigureBox">
+<template name="salesFigureBox">
   <div class="col-md-4" data-pg-collapsed>
     <div class="ibox">
       <div class="ibox-content">
         <button class="btn btn-sm pull-right btn-link" data-toggle="popover" data-placement="top" type="button">
           <i class="fa fa-question-circle pull-right"></i>
         </button>
-        <h5>Staff Cost</h5>
+        <h5>Sales</h5>
 
         <h1 class="no-margins">
-          {{state$weeklyStaffWage}}%
+          ${{weeklySale}}
         </h1>
-        {{#with state$percent}}
+        {{#with percent}}
           <div class="stat-percent font-bold {{textColor}}">{{value}}%
             <i class="fa {{icon}}"></i>
           </div>
         {{/with}}
-        <small>Rostered:
-          {{state$rosteredStaffWage}}%
+        <small>Forecast:
+          ${{forecastedSale}}
         </small>
       </div>
     </div>
