--- a/client/lib/components/reports/reports_header/view.html
+++ b/client/lib/components/reports/reports_header/view.html
@@ -1,5 +1,5 @@
 <template name="reportsHeader">
   <div class="title-action">
-    {{>render component="weekPicker" year=state$currentDate.year week=state$currentDate.week onDateChanged=state$onDateChanged}}
+    {{> weekPicker year=state$currentDate.year week=state$currentDate.week onDateChanged=state$onDateChanged}}
   </div>
 </template>
