--- a/client/views/app/common/week-picker/week-picker.html
+++ b/client/views/app/common/week-picker/week-picker.html
@@ -6,7 +6,7 @@
 
     <button type="button"
             class="btn btn-white date-picker-button">
-      {{state$currentWeekStr}}
+      {{weekDateStr state$weekDate}}
       <span class="caret"></span>
     </button>
 
