New layout for submit/edit job

--- a/client/views/app/job-items/edit-view.html
+++ b/client/views/app/job-items/edit-view.html
@@ -1,3 +1,4 @@
 <template name="jobItemEditView">
+  <!--{{> submitEditJobItem mode="edit"}}-->
   {{> render component="editJobItem"}}
 </template>
