--- a/client/views/app/job-items/submit-view.html
+++ b/client/views/app/job-items/submit-view.html
@@ -1,3 +1,4 @@
 <template name="submitJobItemMainView">
-  {{> render component="submitJobItem"}}
+  {{> submitEditJobItem mode="submit"}}
+  <!--{{> render component="submitJobItem"}}-->
 </template>
