--- a/client/views/app/organizations/area-settings/view.html
+++ b/client/views/app/organizations/area-settings/view.html
@@ -17,7 +17,7 @@
       <label class="col-sm-2 control-label">Area Color</label>
 
       <div class="col-sm-10">
-        {{>render component="colorPicker" onColorChange=state$onColorChange checkedColor=state$areaColor}}
+        {{> colorPicker onColorChange=state$onColorChange checkedColor=state$areaColor}}
       </div>
     </div>
 
