--- a/client/views/app/organizations/organization-flyout-header/create-area/create-area.html
+++ b/client/views/app/organizations/organization-flyout-header/create-area/create-area.html
@@ -19,7 +19,7 @@
         <label class="col-sm-2 control-label">Area Location</label>
 
         <div class="col-sm-10">
-          {{> render component='selectComponent' name='locationId' values=state$locations selected=state$locationId}}
+          {{> selectComponent name='locationId' values=locations selected=state$locationId}}
         </div>
       </div>
 
@@ -27,7 +27,7 @@
         <label class="col-sm-2 control-label">Area Color</label>
 
         <div class="col-sm-10">
-          {{>render component="colorPicker" onColorChange=state$onColorChange}}
+          {{> colorPicker onColorChange=onColorChange checkedColor=state$color}}
         </div>
       </div>
 
