--- a/client/views/app/job-items/job-item-edit-submit/job-items-submit-edit.html
+++ b/client/views/app/job-items/job-item-edit-submit/job-items-submit-edit.html
@@ -118,10 +118,7 @@
 
                   <div class="col-sm-10">
                     <div class="input-group">
-                      <input type="text" name="repeatAt" class="form-control timepicker" value="{{repeatAt}}">
-                      <span class="input-group-addon">
-                        <i class="fa fa-clock-o"></i>
-                      </span>
+                      {{> comboTimeEditable params=repeatAtComboEditableParams}}
                     </div>
                   </div>
                 </div>
