removed redundant code

--- a/client/views/app/users/profile/profile-items/profile-image/profile-image.html
+++ b/client/views/app/users/profile/profile-items/profile-image/profile-image.html
@@ -1,7 +1,7 @@
 <template name="profileImage">
   <div class="ibox-content border-left-right profile-picture-div">
     <div class="box-wrapper pull-right" style="display: none; position: absolute;">
-      {{#if ifMe}}
+      {{#if isMe}}
         {{#if imageExists}}
           <button class="btn btn-sm btn-info" id="uploadImage"><i class="fa fa-edit m-r-sm"></i>Edit Profile Picture
           </button>
