--- a/client/views/app/users/profile/profile.html
+++ b/client/views/app/users/profile/profile.html
@@ -7,8 +7,8 @@
   {{/if}}
   <div class="wrapper wrapper-content">
     <div class="row animated">
-      {{> profile user=user}}
-      {{> rosteredShifts user=user}}
+      {{> profile user}}
+      {{> rosteredShifts user}}
       {{> training userId=user._id}}
     </div>
   </div>
